--- a/app/views/event/about.rhtml
+++ b/app/views/event/about.rhtml
@@ -14,7 +14,7 @@
 	</div>
 	<div class="box_body">
 		<div>
-			<fb:fan profile_id="68339386368" stream="0" connections="10" logobar="1" width="270"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Eventicusde/68339386368">Eventicus.de</a> on Facebook</div>
+			<fb:fan profile_id="68339386368" stream="0" connections="10" logobar="1" width="270" height="350"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Eventicusde/68339386368">Eventicus.de</a> on Facebook</div>
 		</div>
 		<div style="clear:both"></div>
 	</div>
