--- a/app/views/event/show.rhtml
+++ b/app/views/event/show.rhtml
@@ -134,7 +134,7 @@
 			  	<%= link_to avatar_for(@event.user, :small, {:style => "vertical-align: middle"}), user_url(:id => @event.user.login) %>
 				<%= link_to @event.user.login, user_url(:id => @event.user) %>
 				<%= t(:submitted_this_event) %>
-				<span class="small-date"><%= time_ago_or_time_stamp(@event.date_created) %></span>
+				<span class="small-date"><%= time_ago_or_time_stamp(@event.created_at) %></span>
 			<% end %>
 		</div>
 
@@ -224,7 +224,7 @@
 		</div>
 
 		<span style="display:none" class="category"><%=h @event.category.name %></span>
-		<span style="display:none" class="dtstamp"><%=@event.date_created.iso8601 %></span>
+		<span style="display:none" class="dtstamp"><%=@event.created_at.iso8601 %></span>
 		<span style="display:none" class="dtstart"><%=@event.date_start.iso8601 %></span>
 		<span style="display:none" class="dtend"><%=@event.date_end.iso8601 %></span>
 
