--- a/app/views/metro/show.rhtml
+++ b/app/views/metro/show.rhtml
@@ -6,3 +6,7 @@
 
 <%= link_to 'Edit', :action => 'edit', :id => @metro %> |
 <%= link_to 'Back', :action => 'list' %>
+
+<% content_for("page_title") do %>
+	<%= @metro.name %>
+<% end %>
